# CodeGenome

./: .gitignore  .gitleaks.toml  Cargo.toml  README.md  ULTRACONCEPT.md  experiments.checkpoint.json
codegenome-cli/: Cargo.toml
codegenome-cli/src/: main.rs
codegenome-cli/src/commands/: analyze.rs  experiment.rs  federate.rs  index.rs  init.rs  mod.rs  query.rs  serve.rs  status.rs  verify.rs  visualize.rs  workspace_report.rs
codegenome-cli/templates/: graph.html
codegenome-core/: Cargo.toml
codegenome-core/src/: lib.rs
codegenome-core/src/belief/: create.rs  mod.rs  query.rs  store.rs
codegenome-core/src/confidence/: fusion.rs  mod.rs
codegenome-core/src/diff/: git_bridge.rs  mapper.rs  mod.rs  types.rs
codegenome-core/src/embedding/: similarity.rs  store.rs
codegenome-core/src/experiments/: config.rs  fitness.rs  fitness_fns.rs  log.rs  mod.rs  review.rs  runner.rs  runner_helpers.rs
codegenome-core/src/federation/: config.rs  evidence.rs  index.rs  metrics.rs  mod.rs  query.rs  query_context.rs  report.rs  symbol_resolve.rs  workspace.rs
codegenome-core/src/governance/: ledger.rs  mod.rs  write_gate.rs
codegenome-core/src/graph/: community.rs  edge.rs  export.rs  mod.rs  node.rs  overlay.rs  query.rs  resolve.rs  traversal.rs
codegenome-core/src/identity/: digest.rs  frame.rs  mod.rs  uor.rs
codegenome-core/src/index/: dynamic.rs  extract.rs  flow.rs  flow_cfg.rs  flow_dfg.rs  mod.rs  orchestrator.rs  parser.rs  resolver.rs  resolver_multi.rs
codegenome-core/src/lang/: graph_builder.rs  ir.rs  mod.rs  rust.rs  typescript_flow.rs
codegenome-core/src/overlay/: flow.rs  flow_dfg.rs  flow_extract.rs  fused.rs  mod.rs  pdg.rs  process.rs  process_extract.rs  runtime.rs  semantic.rs  semantic_extract.rs  syntax.rs  syntax_extract.rs
codegenome-core/src/signal/: mod.rs  staleness.rs
codegenome-core/src/store/: backend.rs  meta.rs  mod.rs  ondisk.rs
codegenome-core/src/tests/: belief_create_tests.rs  belief_persistence_tests.rs  belief_query_tests.rs  belief_traversal_tests.rs  community_tests.rs  embedding_tests.rs  evidence_tests.rs  federation_query_context_tests.rs  federation_query_tests.rs  federation_symbol_tests.rs  federation_tests.rs  git_bridge_tests.rs  governance_tests.rs  index_flow_tests.rs  index_merger_tests.rs  index_resolver_tests.rs  invariants.rs  lang_python_tests.rs  lang_typescript_tests.rs  mod.rs  multi_lang_pipeline_tests.rs  pdg_tests.rs  process_tests.rs  query_context_tests.rs  resolve_integration_tests.rs  runtime_tests.rs  self_index.rs  semantic_tests.rs  traversal_tests.rs  write_gate_tests.rs
codegenome-identity/: Cargo.toml
codegenome-identity/src/: lib.rs
codegenome-identity/src/confidence/: mod.rs
codegenome-identity/src/diff/: mapper.rs  propagator.rs
codegenome-identity/src/evidence/: entry.rs  mod.rs
codegenome-identity/src/graph/: edge.rs  mod.rs  node.rs  overlay.rs  query_context.rs
codegenome-mcp/: Cargo.toml
codegenome-mcp/src/: lib.rs  server.rs
codegenome-substrate/: Cargo.toml
(+104 files in other folders)
