[package]
name = "codegenome-cli"
version = "0.1.0"
edition = "2021"
description = "CLI for the Unified Code Reality Graph"

[[bin]]
name = "codegenome"
path = "src/main.rs"

[dependencies]
codegenome-core = { path = "../codegenome-core" }
codegenome-mcp = { path = "../codegenome-mcp" }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
