[package]
name = "codegenome-core"
version = "0.1.0"
edition = "2021"
description = "Core algebra for the Unified Code Reality Graph (UCRG)"

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"

[dev-dependencies]
proptest = "1"
