[package]
name = "codegenome-core"
version = "0.1.0"
edition = "2021"
description = "Core algebra for the Unified Code Reality Graph (UCRG)"

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
rand = "0.9"
git2 = "0.19"
rayon = "1"
serde_json = "1"
toml = "0.8"
prost = "0.13"
lsp-types = "0.97"
mistralrs = "0.8"
tokio = { version = "1", features = ["rt-multi-thread"] }

[dev-dependencies]
proptest = "1"
