[package]
name = "codegenome-identity"
version = "0.1.0"
edition = "2021"
description = "Pure identity core for the Unified Code Reality Graph"

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
bincode = "1"
tree-sitter = "0.24"
tree-sitter-rust = "0.23"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.23"
serde_json = "1"
git2 = "0.19"
rayon = "1"
toml = "0.8"
prost = "0.13"
lsp-types = "0.97"
rand = "0.9"

[dev-dependencies]
proptest = "1"
