[package]
name = "codegenome-mcp"
version = "0.1.0"
edition = "2021"
description = "MCP tool server for the Unified Code Reality Graph"

[dependencies]
codegenome-identity = { path = "../codegenome-identity" }
codegenome-substrate = { path = "../codegenome-substrate" }
rmcp = { version = "0.16", features = ["server", "transport-io", "macros"] }
git2 = "0.19"
schemars = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
