[package]
name = "codegenome-substrate"
version = "0.1.0"
edition = "2021"
description = "Operational substrate: governance, reasoning, federation, experiments"

[dependencies]
codegenome-identity = { path = "../codegenome-identity" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1"
toml = "0.8"
tree-sitter = "0.24"
mistralrs = "0.8"
tokio = { version = "1", features = ["rt-multi-thread"] }
blake3 = "1"
rand = "0.9"

[dev-dependencies]
proptest = "1"
